Bug 339595 - Saving message in local folder as .EML removes starting dot in all lines, and ignores line if single dot only line. r=dbienvenu